refactor: inline UserDetailServiceImpl into UserService